2009-03-02  Andreas Kupries  <andreask@activestate.com>

	* jpeg.tcl (::jpeg::imageInfo): Accepted and applied patch by
	* pkgIndex.tcl: Mikhail Teterin <kot@users.sourceforge.net> to
	* jpeg.man: have imageInfo open the image only for reading. Bumped
	  to version 0.3.4. This fixes [Bug 2646568].

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* jpeg.pcx: New file. Syntax definitions for the public commands
	  of the jpeg package.

2008-03-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* jpeg.tcl (::jpeg::getExif): Added check to reject bad section
	* jpeg.man: types outside of {main, thumbnail}. Bumped version to
	* pkgIndex.tcl: 0.3.3

	* jpeg.test: Added testsuite and example images for it.
	* testimages/IMG_7898.JPG:
	* testimages/IMG_7898.JPG.thumb:
	* testimages/IMG_7898.exif.txt:
	* testimages/IMG_7898.thumbexif.txt:
	* testimages/IMG_7917.JPG:
	* testimages/IMG_7917.JPG.thumb:
	* testimages/IMG_7917.exif.txt:
	* testimages/IMG_7917.thumbexif.txt:
	* testimages/IMG_7950.JPG:
	* testimages/IMG_7950.JPG.thumb:
	* testimages/IMG_7950.exif.txt:
	* testimages/IMG_7950.thumbexif.txt:

2008-1-10  Aaron Faupell <afaupell@users.sourceforge.net>

	* jpeg.tcl: fix for bug 1868088 "Integer value too large to
	  represent" in MaxAperture arm of formatExif. Bumped version to
	  0.3.2

2007-11-20  Andreas Kupries   <andreask@activestate.com>

	* jpeg.tcl (::jpeg::stripJPEG): Fixed encoding bug reported by
	* pkgIndex.tcl: Martin Lemburg on news:clt, and solved by Ohtsuka
	* jpeg.man: Yoshio. The output file was not set to binary,
	  breaking the jpeg data written to it. Bumped version to 0.3.1.
