@@ -1,7 +1,7 @@
 [manpage_begin jpeg n 0.3.4]
 [copyright {2004-2005, Code: Aaron Faupell <afaupell@users.sourceforge.net>}]
 [copyright {2007, Code:  Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
-[copyright {2004-2007, Doc:  Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[copyright {2004-2009, Doc:  Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {JPEG image manipulation}]
 [titledesc {JPEG querying and manipulation of meta data}]
 [category  {File formats}]
@@ -54,6 +54,7 @@ Throws an error if [arg file] is not a JPEG image.
 
 [example {
     set fh [open thumbnail.jpg w+]
+    fconfigure $fh -translation binary -encoding binary
     puts -nonewline $fh [::jpeg::getThumbnail photo.jpg]
     close $fh
 }]
