@@ -7,11 +7,128 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: jpeg.tcl,v 1.16 2009/03/02 18:35:53 andreas_kupries Exp $
+# RCS: @(#) $Id: jpeg.tcl,v 1.17 2009/06/05 19:36:40 andreas_kupries Exp $
 
-package provide jpeg 0.3.4
+# ### ### ### ######### ######### #########
+## Requisites
 
 namespace eval ::jpeg {}
+
+# ### ### ### ######### ######### #########
+## Notes :: Structure of jpeg files.
+
+# Base types
+#
+# BYTE    = 1 byte
+# SHORT   = 2 bytes, endianess determined by context.
+# BESHORT = 2 bytes, big endian
+# INT     = 4 bytes, endianess determined by context.
+
+# JPEG types
+#
+# JPEG = <
+#   BYTE     [2] == 0xFF 0xD8 (SOI (Start Of Image))
+#   JSEGMENT [.] 1 or more jpeg segments, variadic size
+#   BYTE     [2] == 0xFF 0xD9 (EOI (End Of Image))
+# >
+#
+# JSEGMENT = <
+#   BYTE    [1]   == 0xFF
+#   BYTE    [1]   Segment Tag, type marker
+#   BESHORT [1]   Segment Length N
+#   BYTE    [N-2] Segment Data, interpreted dependent on tag.
+# >
+#
+# Notable segments, and their structure.
+#
+# Comment = JSEGMENT (Tag = 0xFE, Data = <
+#
+# >)
+
+
+# Type 0xFE (Comment)
+# Data BYTE [ ]
+# Note: Multiple comment segments are allowed.
+
+# Type 0xC0/0xC1/0xC2/0xC3 (Start of Frame)
+# Data BYTE    [1] Precision
+#      BESHORT [1] Height
+#      BESHORT [1] Width
+#      BYTE    [1] Number of color components
+#      ...
+
+# Type 0xEx (x=0-9A-F) (App0 - App15)
+# Data It is expected that the data starts with a checkable marker, as
+#      the app segments can be used by multiple applications for
+#      different purposes. I.e. a sub-type is needed before the
+#      segment data can be processed.
+
+# App0/JFIF image info
+# Type 0xE0
+# Data BYTE    [5] 'JFIF\0'	JFIF sub-type marker
+#      BYTE    [1] Version1 (major)
+#      BYTE    [1] Version2 (minor)
+#      BYTE    [1] Units
+#      BESHORT [1] X-density (dots per inch ?)
+#      BESHORT [1] Y-density
+#      BYTE    [1] X-thumb   (Width  of thumbnail, if any, or zero)
+#      BYTE    [1] Y-thumb   (Height of thumbnail, if any, or zero)
+
+# App0/JFXX extended image information
+# Type 0xE0
+# Data BYTE    [5] 'JFXX\0'	JFXX sub-type marker
+#      BYTE    [1] Extension code 10 -> JPEG thumbnail
+#                                 11 -> Palletized thumbnail
+#                                 13 -> RGB thumbnail
+#      BYTE    [ ] Data per the extension code.
+
+# App1/EXIF
+# Type 0xE1
+# Data BYTE  [6] 'Exif\0\0' EXIF sub-type marker. (1)
+#      BYTE  [2] Byte Order  0x4d 0x4d = big endian
+#                         or 0x49 0x49 = small endian
+#      SHORT [1] Magic == 42 under the specified byteorder.
+#      INT   [1] Next  == Offset to the first actual EXIF data block.
+#
+# EXIF data block structure (IFD = Image File Directory)
+#
+# 1. SHORT [1] Number N of exif entries
+# 2. ENTRY [N] Array of exif entries
+# 3. INT   [1] Offset to the next EXIF data block, or <0 for the last block.
+#
+
+# exif ENTRY structure
+#
+# 1. SHORT [1] num
+# 2. SHORT [1] tag    = exif key
+# 3. SHORT [1] format
+# 4. INT   [1] component
+# 5. INT   [1] value
+
+# The 'value is interpreted dependent on the values of tag, format,
+# and component.
+#
+# A.  Tag in ( 0x8769, 0xA005 )
+#     Value is offset to a subordinate exif data block, process recursively.
+# B.  Size = components * sizeof(format)
+# B1. Size > 4
+#     Value is offset to the actual value.
+# B2. Size <= 4
+#     Value is the actual value.
+
+# Usually a jpeg with exif information has two exif data blocks. The
+# first is the main block, the second the thumbnail block.
+#
+# Note that all the exif data structures are within the app1/exif
+# segment.
+#
+# (1) The offset of the first byte after the exif marker is what all
+#     the offsets in exif are relative to.
+
+# Type 0xDA (SOS, Start of Stream/Scan)
+# Followed by the JPEG data. Last segment before EOI
+
+# ### ### ### ######### ######### #########
 
 # open a file, check jpeg signature, and a return a file handle
 # at the start of the first marker
@@ -47,6 +164,7 @@ proc ::jpeg::markers {fh} {
         lappend chunks [list $type [tell $fh] $len]
         seek $fh $len current
     }
+    # chunks = list (list (type offset length) ...)
     return $chunks
 }
 
@@ -264,6 +382,7 @@ proc ::jpeg::getExif {file {type main}} {
         # the answer is 42, if we have our byte order correct
         _scan $byteOrder [read $fh 6] si magic next
         if {$magic != 42} { close $fh; return }
+
         seek $fh [expr {$start + $next}] start
         if {$type != "thumbnail"} {
 	    if {$type != "main"} {
@@ -924,3 +1043,32 @@ proc ::jpeg::_format {end value type num} {
     return $value
 }
 
+# Do a compatibility version of [lassign] for versions of Tcl without
+# that command. Not using a version check as special builds may have
+# the command even if they are a version which nominally would not.
+
+if {![llength [info commands lassign]]} {
+    proc ::jpeg::lassign {sequence v args} {
+	set args [linsert $args 0 $v]
+	set a [::llength $args]
+
+	# Nothing to assign.
+	#if {$a == 0} {return $sequence}
+
+	# Perform assignments
+	set i 0
+	foreach v $args {
+	    upvar 1 $v var
+	    set        var [::lindex $sequence $i]
+	    incr i
+	}
+
+	# Return remainder, if there is any.
+	return [::lrange $sequence $a end]
+    }
+}
+
+# ### ### ### ######### ######### #########
+## Ready
+
+package provide jpeg 0.3.4
